--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "description": "Astro Web",
   "scripts": {
     "dev": "vite",
-    "build": "vite build"
+    "build": "vite build",
+    "preview": "vite preview",
+    "start": "vite"
   },
   "dependencies": {
     "clsx": "2.1.1",
@@ -20,6 +22,7 @@
     "@animaapp/vite-plugin-screen-graph": "^0.1.5",
     "@vitejs/plugin-react": "4.3.4",
     "esbuild": "0.24.0",
+    "gh-pages": "^6.3.0",
     "globals": "15.12.0",
     "tailwindcss": "3.4.16",
     "vite": "6.0.4"
